[features] more styling for header, email anchor tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
   <div class="Index">
     <div class="Index-headerBox">
       <img class="Index-siteImage"src="taejinlogocropped.png">
-      <h1 class="Index-header"> Andrew T. Ha</h1>
+      <div class="TitleBox">
+        <h1 class="Index-header"> Andrew T. Ha's</h1> 
+        <h2 class="Index-subHeader">Voiceover Acting</h2>
+      </div>
     </div>
     <div class="Index-voiceDemo">
       <p>
@@ -30,6 +33,13 @@
         At tritani persius repudiandae his, vim decore deleniti cu, ne est ignota dictas principes. Usu alii invidunt gloriatur an, tibique ocurreret et cum. Ne alia verterem pro, et eam inermis dignissim argumentum, qui mazim tantas ei. No porro suscipiantur mel.          </p>
     </div>
     <div class="Index-contact">
+      <form 
+        action="mailto:singlemightychomp@gmail.com" 
+        method="post" enctype="text/plain" >
+        FirstName:<input type="text" name="FirstName">
+        Email:<input type="text" name="Email">
+        <input type="submit" name="submit" value="Submit">
+      </form>
       <div>
         <a href="#">
           Andrew T. Ha
@@ -39,7 +49,7 @@
         310-555-5555
       </a>
       <br/>
-      <a href="#">
+      <a href="mailto:andrewTHa@gmail.com">
         andrewTHa@gmail.com
       </a>
     </div>
