[features] align logo image with header

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
         310-555-5555
       </a>
       <br/>
-      <a href="mailto:andrewTHa@gmail.com">
-        andrewTHa@gmail.com
+      <a href="mailto:andrewtha@hahavoiceovers.com">
+        andrewtha@hahavoiceovers.com
       </a>
     </div>
   </div>
