[features] style for social media icons, style for anchor tags, use href=tel: for phone number anchor tag

--- a/public/index.html
+++ b/public/index.html
@@ -33,19 +33,10 @@
         At tritani persius repudiandae his, vim decore deleniti cu, ne est ignota dictas principes. Usu alii invidunt gloriatur an, tibique ocurreret et cum. Ne alia verterem pro, et eam inermis dignissim argumentum, qui mazim tantas ei. No porro suscipiantur mel.          </p>
     </div>
     <div class="Index-contact">
-      <form 
-        action="mailto:singlemightychomp@gmail.com" 
-        method="post" enctype="text/plain" >
-        FirstName:<input type="text" name="FirstName">
-        Email:<input type="text" name="Email">
-        <input type="submit" name="submit" value="Submit">
-      </form>
       <div>
-        <a href="#">
           Andrew T. Ha
-        </a>
       </div>
-      <a href="#">
+      <a href="tel:310-555-5555">
         310-555-5555
       </a>
       <br/>
@@ -53,6 +44,19 @@
         andrewtha@hahavoiceovers.com
       </a>
     </div>
+    <footer>
+      <div class="socialMediaIcons">
+        <a>
+          <img class="socialMediaIcons-icon" src="linkedIn_128x128.png">
+        </a>
+        <a>
+          <img class="socialMediaIcons-icon" src="youtube_128x128.png">
+        </a>
+        <a>
+          <img class="socialMediaIcons-icon" src="facebook_128x128.png">
+        </a>
+      </div> 
+    </footer>
   </div>
 </body>
 </html>
