[features] set up webpack-dev-server

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div class="Index">
     <div class="Index-headerBox">
-      <img class="Index-siteImage"src="taejinlogocropped.png">
+      <img class="Index-siteImage"src="assets/taejinlogocropped.png">
       <div class="TitleBox">
         <h1 class="Index-header"> Andrew T. Ha's</h1> 
         <h2 class="Index-subHeader">Voiceover Acting</h2>
@@ -50,10 +51,10 @@
           <img class="socialMediaIcons-icon" src="assets/linkedIn_128x128.png">
         </a>
         <a>
-          <img class="socialMediaIcons-icon" src="youtube_128x128.png">
+          <img class="socialMediaIcons-icon" src="assets/youtube_128x128.png">
         </a>
         <a>
-          <img class="socialMediaIcons-icon" src="facebook_128x128.png">
+          <img class="socialMediaIcons-icon" src="assets/facebook_128x128.png">
         </a>
       </div> 
     </footer>
