--- a/index.html
+++ b/index.html
@@ -24,14 +24,9 @@
   <div class="Index-info">
     <p>
       <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
-
-      Ferri audiam comprehensam usu cu, eu prima ubique adolescens eum. Cu pro molestie concludaturque, sonet nusquam eu duo. Duo te viderer explicari sententiae, doming intellegebat consequuntur at usu. Usu eu dico maluisset, <span>ius</span> no veniam elaboraret suscipiantur, nec noster electram pertinacia cu. Solum soluta euismod his te, no nullam senserit est.
-
-      Appetere signiferumque nam in. Ornatus insolens eu ius, cu discere interesset delicatissimi quo, sit voluptaria adipiscing an. Rebum erant sed ut, facete perfecto ei eam. Nulla cetero percipit duo id, eu vis exerci option numquam, nam aliquam argumentum adversarium te. Vix fierent adipiscing an, percipit similique suscipiantur vix eu.
-
-      Eius philosophia pro at. Pericula gubergren sea id, mollis electram consectetuer usu no. Vel ea mutat graecis expetendis. Odio adipiscing ex eos, no qui fabulas electram, vix verterem expetendis ea. Debet fabellas id ius. Sit ea stet perfecto disputationi.
-
-      At tritani persius repudiandae his, vim decore deleniti cu, ne est ignota dictas principes. Usu alii invidunt gloriatur an, tibique ocurreret et cum. Ne alia verterem pro, et eam inermis dignissim argumentum, qui mazim tantas ei. No porro suscipiantur mel.
+      <br/>
+      <br/>
+      Ferri audiam comprehensam usu cu, eu prima ubique adolescens eum. Cu pro molestie concludaturque, sonet nusquam eu duo. Duo te viderer explicari sententiae, doming intellegebat consequuntur at usu. Usu eu dico maluisset, <span>ius</span> no veniam elaboraret suscipiantur
     </p>
   </div>
   <div class="Index-contact">
@@ -47,14 +42,14 @@
     </a>
   </div>
   <footer>
-    <div class="socialMediaIcons">
-      <a>
+    <div class="socialMediaIcons" >
+      <a target="_blank" href="https://www.linkedin.com/">
         <img class="socialMediaIcons-icon" src="assets/linkedIn_128x128.png">
       </a>
-      <a>
+      <a target="_blank" href="https://www.youtube.com/">
         <img class="socialMediaIcons-icon" src="assets/youtube_128x128.png">
       </a>
-      <a>
+      <a target="_blank" href="https://www.facebook.com/">
         <img class="socialMediaIcons-icon" src="assets/facebook_128x128.png">
       </a>
     </div> 
