[features] experiments with font (incorporate Proxima nova) hover grey transparent overlay for social media icons.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
   <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic|Source+Sans+Pro:400,300|Droid+Sans|Roboto+Slab:400,300|Shadows+Into+Light|Amatic+SC|Chewy|Gloria+Hallelujah|Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
   <div class="Index">
@@ -44,13 +45,19 @@
   <footer>
     <div class="socialMediaIcons" >
       <a target="_blank" href="https://www.linkedin.com/">
-        <img class="socialMediaIcons-icon" src="assets/linkedIn_128x128.png">
+        <div class="socialMediaIcons-icon--overlay">
+          <img class="socialMediaIcons-icon" src="assets/linkedIn_128x128.png">
+        </div> 
       </a>
       <a target="_blank" href="https://www.youtube.com/">
-        <img class="socialMediaIcons-icon" src="assets/youtube_128x128.png">
+        <div class="socialMediaIcons-icon--overlay">
+          <img class="socialMediaIcons-icon" src="assets/youtube_128x128.png">
+        </div> 
       </a>
       <a target="_blank" href="https://www.facebook.com/">
-        <img class="socialMediaIcons-icon" src="assets/facebook_128x128.png">
+        <div class="socialMediaIcons-icon--overlay">
+          <img class="socialMediaIcons-icon" src="assets/facebook_128x128.png">
+        </div> 
       </a>
     </div> 
   </footer>
