--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
   
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic|Source+Sans+Pro:400,300|Droid+Sans|Roboto+Slab:400,300|Shadows+Into+Light|Amatic+SC|Chewy|Gloria+Hallelujah|Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>
 
@@ -15,11 +14,28 @@
       </div>
     </div>
     <div class="Index-voiceDemo">
+      
+      <object height="81" width="100%" id="yourPlayerId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
+        <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fsoundcloud.com%2Fmatas%2Fhobnotropic&enable_api=true&object_id=yourPlayerId"></param>
+        <param name="allowscriptaccess" value="always"></param>
+        <embed allowscriptaccess="always" height="81" src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fsoundcloud.com%2Fmatas%2Fhobnotropic&enable_api=true&object_id=yourPlayerId" type="application/x-shockwave-flash" width="100%" name="yourPlayerId"></embed>
+      </object>
+
+      <object height="81" width="100%">
+        <param name="movie"
+          value="http://player.soundcloud.com/player.swf?{ ADD YOUR PARAMETERS HERE }&url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F293"></param>
+        <param name="allowscriptaccess" value="always"></param>
+        <embed
+          src="http://player.soundcloud.com/player.swf?{ ADD YOUR PARAMETERS HERE }&url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F293"
+          allowscriptaccess="always" height="81"  type="application/x-shockwave-flash" width="100%">
+        </embed>
+      </object>
+
       <p>
-       <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+       <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
      </p>
      <p>
-       <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+       <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </p>
   </div>
   <div class="Index-info">
@@ -38,7 +54,7 @@
       310-555-5555
     </a>
     <br/>
-    <a href="mailto:andrewtha@hahavoiceovers.com">
+    <a class="Index-contactNumber" href="mailto:andrewtha@hahavoiceovers.com">
       andrewtha@hahavoiceovers.com
     </a>
   </div>
@@ -62,5 +78,6 @@
     </div> 
   </footer>
   </div>
+  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
