--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-  
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="Index">
@@ -30,22 +29,24 @@
         </embed>
       </object> -->
 
-<!--       <p>
+      <p>
        <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
      </p>
      <p>
        <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-    </p> -->
+    </p>
   </div>
   <div class="Index-info">
     <p>
+      <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
+      <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
       <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
       <br/>
       <br/>
       Ferri audiam comprehensam usu cu, eu prima ubique adolescens eum. Cu pro molestie concludaturque, sonet nusquam eu duo. Duo te viderer explicari sententiae, doming intellegebat consequuntur at usu. Usu eu dico maluisset, <span>ius</span> no veniam elaboraret suscipiantur
     </p>
   </div>
-  <div class="Index-contact">
+<!--   <div class="Index-contact">
     <div>
         Andrew T. Ha
     </div>
@@ -57,8 +58,21 @@
       andrewtha@hahavoiceovers.com
     </a>
   </div>
-
+ -->
   <footer>
+    <div class="Index-contact">
+      <div>
+          Andrew T. Ha
+      </div>
+      <a class="Index-contactNumber" href="tel:310-555-5555">
+        310-555-5555
+      </a>
+      <br class="Index-contactBreak" />
+      <a class="Index-contactEmail" href="mailto:andrewtha@hahavoiceovers.com">
+        andrewtha@hahavoiceovers.com
+      </a>
+    </div>
+
     <div class="socialMediaIcons" >
       <a target="_blank" href="https://www.linkedin.com/">
         <div class="socialMediaIcons-icon--overlay">
