--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic|Source+Sans+Pro:400,300|Droid+Sans|Roboto+Slab:400,300|Shadows+Into+Light|Amatic+SC|Chewy|Gloria+Hallelujah|Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
   <div class="Index">
@@ -11,6 +13,10 @@
         <h2 class="Index-subHeader">Voiceover Acting</h2>
       </div>
     </div>
+    <nav>
+      <a class="contact">Contact</a>
+      <a class="socialmedia">Social Media</a>
+    </nav>
     <div class="Index-voiceDemo">
       
 <!--       <object height="81" width="100%" id="yourPlayerId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
@@ -94,7 +100,6 @@
 
   </div>
   <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic|Source+Sans+Pro:400,300|Droid+Sans|Roboto+Slab:400,300|Shadows+Into+Light|Amatic+SC|Chewy|Gloria+Hallelujah|Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>
 
 </body>
 </html>
