--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300italic|Source+Sans+Pro:400,300|Droid+Sans|Roboto+Slab:400,300|Shadows+Into+Light|Amatic+SC|Chewy|Gloria+Hallelujah|Lato:400,300|Oswald:400,300|Lora' rel='stylesheet' type='text/css'>
-
 </head>
 <body>
   <div class="Index">
@@ -15,31 +13,13 @@
     </div>
     <nav>
       <a class="contact">Contact</a>
-      <a class="socialmedia">Social Media</a>
     </nav>
-    <div class="Index-voiceDemo">
-      
-<!--       <object height="81" width="100%" id="yourPlayerId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-        <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fsoundcloud.com%2Fmatas%2Fhobnotropic&enable_api=true&object_id=yourPlayerId"></param>
-        <param name="allowscriptaccess" value="always"></param>
-        <embed allowscriptaccess="always" height="81" src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fsoundcloud.com%2Fmatas%2Fhobnotropic&enable_api=true&object_id=yourPlayerId" type="application/x-shockwave-flash" width="100%" name="yourPlayerId"></embed>
-      </object>
-
-      <object height="81" width="100%">
-        <param name="movie"
-          value="http://player.soundcloud.com/player.swf?{ ADD YOUR PARAMETERS HERE }&url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F293"></param>
-        <param name="allowscriptaccess" value="always"></param>
-        <embed
-          src="http://player.soundcloud.com/player.swf?{ ADD YOUR PARAMETERS HERE }&url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F293"
-          allowscriptaccess="always" height="81"  type="application/x-shockwave-flash" width="100%">
-        </embed>
-      </object> -->
-
-      <p>
-       <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
-     </p>
-     <p>
-       <iframe class="DemoWidget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/230240104&amp;color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+    <div class="Index-voiceDemo">  
+    <p>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241359485&amp;color=33adff&amp;theme_color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_artwork=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+    </p>
+    <p>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241359458&amp;color=33adff&amp;theme_color=33adff&amp;show_artwork=false&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </p>
   </div>
   <div class="Index-info">
@@ -52,19 +32,6 @@
       Ferri audiam comprehensam usu cu, eu prima ubique adolescens eum. Cu pro molestie concludaturque, sonet nusquam eu duo. Duo te viderer explicari sententiae, doming intellegebat consequuntur at usu. Usu eu dico maluisset, <span>ius</span> no veniam elaboraret suscipiantur
     </p>
   </div>
-<!--   <div class="Index-contact">
-    <div>
-        Andrew T. Ha
-    </div>
-    <a class="Index-contactNumber" href="tel:310-555-5555">
-      310-555-5555
-    </a>
-    <br class="Index-contactBreak" />
-    <a class="Index-contactEmail" href="mailto:andrewtha@hahavoiceovers.com">
-      andrewtha@hahavoiceovers.com
-    </a>
-  </div>
- -->
   <footer>
     <div class="Index-contact">
       <div>
