[features] change body content width to have better line lengths at all screen sizes, set max-width of Soundcloud widgets

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       </div>
     </div>
     <nav>
+      <a class="demos">Demos</a>
       <a class="contact">Contact</a>
     </nav>
     <div class="Index-voiceDemo">  
@@ -32,8 +33,7 @@
       Ferri audiam comprehensam usu cu, eu prima ubique adolescens eum. Cu pro molestie concludaturque, sonet nusquam eu duo. Duo te viderer explicari sententiae, doming intellegebat consequuntur at usu. Usu eu dico maluisset, <span>ius</span> no veniam elaboraret suscipiantur
     </p>
   </div>
-  <footer>
-    <div class="Index-contact">
+      <div class="Index-contact">
       <div>
           Andrew T. Ha
       </div>
@@ -45,7 +45,7 @@
         andrewtha@hahavoiceovers.com
       </a>
     </div>
-
+  <footer>
     <div class="socialMediaIcons" >
       <a target="_blank" href="https://www.linkedin.com/">
         <div class="socialMediaIcons-icon--overlay">
