[features] add smooth scroll links to bottom of page as well, refactor smoothScrollAdder to work with multiple links, fix bug with smoothscroll that made the scroll go to wrong place on page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       </div>
     </div>
     <nav>
-      <a class="demos">Demos</a>
+      <a class="demos">Demos</a> |
+      <a class="about-me">About Me</a> |
       <a class="contact">Contact</a>
     </nav>
     <div class="Index-voiceDemo">  
@@ -64,6 +65,11 @@
       </a>
     </div> 
   </footer>
+  <nav>
+    <a class="demos">Demos</a> |
+    <a class="about-me">About Me</a> |
+    <a class="contact">Contact</a>
+  </nav>
 
   </div>
   <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
