--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <div class="Index">
     <div class="Index-headerBox">
-      <img class="Index-siteImage"src="assets/taejinlogocropped.png">
+      <div class="Index-siteImage"></div>
       <div class="TitleBox">
         <h1 class="Index-header"> Andrew <span>T.</span> Ha's</h1> 
         <h2 class="Index-subHeader">Voiceover Acting</h2>
