[features] make logo less sharp when using smaller images, modify webpack build params so that the bundle is overwritten

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
   <div class="Index">
     <div class="Index-headerBox">
-      <div class="Index-siteImage"></div>
+      <div role="img" alt="andrew ha website logo" class="Index-siteImage"></div>
       <div class="TitleBox">
         <h1 class="Index-header"> Andrew <span>T.</span> Ha's</h1> 
         <h2 class="Index-subHeader">Voiceover Acting</h2>
