--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
-  
+  <link rel="stylesheet" type="text/css" href="public/main.css" charset="utf-8">
 </head>
 <body>
   <div class="Index">
@@ -74,6 +73,7 @@
   </nav>
 
   </div>
+  <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
 </body>
 </html>
