[features] apply color scheme to website

--- a/index.html
+++ b/index.html
@@ -19,20 +19,15 @@
     </nav>
     <div class="Index-voiceDemo">  
     <p>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241359485&amp;color=33adff&amp;theme_color=33adff&amp;auto_play=false&amp;hide_related=false&amp;show_artwork=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241359485&amp;color=7fd0bb&amp;theme_color=7fd0bb&amp;auto_play=false&amp;hide_related=false&amp;show_artwork=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </p>
     <p>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241359458&amp;color=33adff&amp;theme_color=33adff&amp;show_artwork=false&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/241359458&amp;color=7fd0bb&amp;theme_color=7fd0bb&amp;show_artwork=false&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
     </p>
   </div>
   <div class="Index-info">
     <p>
-      <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
-      <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
-      <span>Lorem</span> ipsum dolor sit amet, eum odio maluisset definitionem an, te lorem feugait recusabo ius, qui id suas affert gubergren. Vix no tale suas vituperata. Ubique fuisset sit et, eos id elitr volutpat consetetur. Ea mea saepe integre iracundia, accusamus disputationi id mea. Ocurreret reprehendunt sea cu, vis ut inermis gloriatur.
-      <br/>
-      <br/>
-      Ferri audiam comprehensam usu cu, eu prima ubique adolescens eum. Cu pro molestie concludaturque, sonet nusquam eu duo. Duo te viderer explicari sententiae, doming intellegebat consequuntur at usu. Usu eu dico maluisset, <span>ius</span> no veniam elaboraret suscipiantur
+      Armed with a "chameleon voice" that can change on demand and on the fly, and with a particular talent for taking and implementing directions immediately, I am confident I can reach any of your wants and needs. From weeping to wrathful, concerned to ecstatic, I specialize in portraying a broad range of emotion with sincerity and gravity. Be it from your studio or my own Pro Tools enabled studio, we've got all it takes to meet your needs.
     </p>
   </div>
       <div class="Index-contact">
