[features] style fixes, reduce the number of smooth scroll links to reduce clutter, make the sizes of the links match the text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta
   <link rel="stylesheet" type="text/css" href="public/main.css" charset="utf-8">
 </head>
 <body>
@@ -13,8 +14,6 @@
       </div>
     </div>
     <nav>
-      <a class="demos">Demos</a> |
-      <a class="about-me">About Me</a> |
       <a class="contact">Contact</a>
     </nav>
     <div class="Index-voiceDemo">  
@@ -62,9 +61,7 @@
     </div> 
   </footer>
   <nav>
-    <a class="demos">Demos</a> |
-    <a class="about-me">About Me</a> |
-    <a class="contact">Contact</a>
+    <a class="demos">Demos</a>
   </nav>
 
   </div>
