[features] meta tags + schema.org markup for SEO

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta
+  <meta name="title" content="Andrew T. Ha's voiceover acting">
+  <meta name="description" content="For an emotional impact delivered with sincerity and clear articulation, search no further! Andrew can provide the voice you need, from smooth and sultry to fierce and funny! Industrial videos, character voices, radio spots, TV commercials, whatever your needs, I can provide.">
   <link rel="stylesheet" type="text/css" href="public/main.css" charset="utf-8">
 </head>
 <body>
@@ -29,17 +30,23 @@
       Armed with a "chameleon voice" that can change on demand and on the fly, and with a particular talent for taking and implementing directions immediately, I am confident I can reach any of your wants and needs. From weeping to wrathful, concerned to ecstatic, I specialize in portraying a broad range of emotion with sincerity and gravity. Be it from your studio or my own Pro Tools enabled studio, we've got all it takes to meet your needs.
     </p>
   </div>
-      <div class="Index-contact">
-      <div>
+      <div class="Index-contact" itemscope itemtype="http://schema.org/Person">
+      <div itemprop="name">
           Andrew T. Ha
       </div>
-      <a class="Index-contactNumber" href="tel:310-555-5555">
+      <div itemprop="jobTitle">
+          Voice actor
+      </div>
+      <a class="Index-contactNumber" href="tel:310-555-5555" >
         310-555-5555
       </a>
+      <meta content="310-555-5555" itemprop="telephone" >
+
       <br class="Index-contactBreak" />
       <a class="Index-contactEmail" href="mailto:andrewtha@hahavoiceovers.com">
         andrewtha@hahavoiceovers.com
       </a>
+      <meta content="andrewtha@hahavoiceovers.com" itemprop="email">
     </div>
   <footer>
     <div class="socialMediaIcons" >
