[features] add job title to the page, add minifying css to tasks

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           Andrew T. Ha
       </div>
       <div itemprop="jobTitle">
-          Voice actor
+          Voiceover actor
       </div>
       <a class="Index-contactNumber" href="tel:310-555-5555" >
         310-555-5555
