--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <meta name="title" content="Andrew T. Ha's voiceover acting">
   <meta name="description" content="For an emotional impact delivered with sincerity and clear articulation, search no further! Andrew can provide the voice you need, from smooth and sultry to fierce and funny! Industrial videos, character voices, radio spots, TV commercials, whatever your needs, I can provide.">
   <link rel="stylesheet" type="text/css" href="public/main.css" charset="utf-8">
