[features] add highlighting transition to contact info upon clicking smooth scroll link. Need to make this work on desktop for phone number and e-mail since those anchor tags are swapped out for divs on desktop

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="Index-headerBox">
       <div role="img" alt="andrew ha website logo" class="Index-siteImage"></div>
       <div class="TitleBox">
-        <h1 class="Index-header"> Andrew <span>T.</span> Ha's</h1> 
+        <h1 class="Index-header"> Andrew <span class="secondaryText">T.</span> Ha's</h1> 
         <h2 class="Index-subHeader">Voiceover Acting</h2>
       </div>
     </div>
@@ -30,21 +30,21 @@
       Armed with a "chameleon voice" that can change on demand and on the fly, and with a particular talent for taking and implementing directions immediately, I am confident I can reach any of your wants and needs. From weeping to wrathful, concerned to ecstatic, I specialize in portraying a broad range of emotion with sincerity and gravity. Be it from your studio or my own Pro Tools enabled studio, we've got all it takes to meet your needs.
     </p>
   </div>
-      <div class="Index-contact" itemscope itemtype="http://schema.org/Person">
+      <div class="Index-contact unhighlighted" itemscope itemtype="http://schema.org/Person">
       <div itemprop="name">
-          Andrew T. Ha
+        <span class>Andrew T. Ha</span>
       </div>
       <div itemprop="jobTitle">
-          Voiceover actor
+        <span>Voiceover actor</span>
       </div>
       <a class="Index-contactNumber" href="tel:310-986-7277" >
-         310-986-7277
+         <span>310-986-7277</span>
       </a>
       <meta content="310-986-7277" itemprop="telephone" >
 
       <br class="Index-contactBreak" />
       <a class="Index-contactEmail" href="mailto:andrewtha@hahavoiceovers.com">
-        andrewtha@hahavoiceovers.com
+        <span>andrewtha@hahavoiceovers.com</span>
       </a>
       <meta content="andrewtha@hahavoiceovers.com" itemprop="email">
     </div>
