[features] bring html, js, and scss up to date

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <div class="Index">
     <div class="Index-headerBox">
-      <div role="img" alt="andrew ha website logo" class="Index-siteImage"></div>
+        <a href="http://hahavoiceovers.com">
+          <div role="img" alt="andrew ha website logo" class="Index-siteImage"></div>
+        </a>
       <div class="TitleBox">
         <h1 class="Index-header"> Andrew <span class="secondaryText">T.</span> Ha's</h1> 
         <h2 class="Index-subHeader">Voiceover Acting</h2>
@@ -30,37 +32,33 @@
       Armed with a "chameleon voice" that can change on demand and on the fly, and with a particular talent for taking and implementing directions immediately, I am confident I can reach any of your wants and needs. From weeping to wrathful, concerned to ecstatic, I specialize in portraying a broad range of emotion with sincerity and gravity. Be it from your studio or my own Pro Tools enabled studio, we've got all it takes to meet your needs.
     </p>
   </div>
-      <div class="Index-contact unhighlighted" itemscope itemtype="http://schema.org/Person">
-      <div itemprop="name">
-        <span class>Andrew T. Ha</span>
-      </div>
-      <div itemprop="jobTitle">
-        <span>Voiceover actor</span>
-      </div>
-      <a class="Index-contactNumber" href="tel:310-986-7277" >
-         <span>310-986-7277</span>
-      </a>
-      <meta content="310-986-7277" itemprop="telephone" >
-
-      <br class="Index-contactBreak" />
-      <a class="Index-contactEmail" href="mailto:andrewtha@hahavoiceovers.com">
-        <span>andrewtha@hahavoiceovers.com</span>
-      </a>
-      <meta content="andrewtha@hahavoiceovers.com" itemprop="email">
+  <div class="Index-contact unhighlighted" itemscope itemtype="http://schema.org/Person">
+    <div itemprop="name">
+      <span class>Andrew T. Ha</span>
     </div>
+
+    <div itemprop="jobTitle">
+      <span>Voiceover actor</span>
+    </div>
+
+    <a class="Index-contactEmail" href="mailto:hahavoiceovers@gmail.com">
+      <span>hahavoiceovers@gmail.com</span>
+    </a>
+    <meta content="hahavoiceovers@gmail.com" itemprop="email">
+  </div>  
   <footer>
     <div class="socialMediaIcons" >
-      <a target="_blank" href="https://www.linkedin.com/">
+      <a target="_blank" href="https://www.linkedin.com/in/andrew-ha-9aa732108">
         <div class="socialMediaIcons-icon--overlay">
           <img class="socialMediaIcons-icon" src="assets/linkedIn_128x128.png">
         </div> 
       </a>
-      <a target="_blank" href="https://www.youtube.com/">
+      <a target="_blank" href="https://www.youtube.com/channel/UCnnLsJz1TVictNcH7SlWAuQ">
         <div class="socialMediaIcons-icon--overlay">
           <img class="socialMediaIcons-icon" src="assets/youtube_128x128.png">
         </div> 
       </a>
-      <a target="_blank" href="https://www.facebook.com/">
+      <a target="_blank" href="https://www.facebook.com/profile.php?id=100011332869629">
         <div class="socialMediaIcons-icon--overlay">
           <img class="socialMediaIcons-icon" src="assets/facebook_128x128.png">
         </div> 
